--- a/styles/header.css
+++ b/styles/header.css
@@ -1,5 +1,6 @@
 header {
   height: 75px;
+  width: 100%;
 
   display: flex;
   justify-content: center;
