--- a/styles/left-sidebar.css
+++ b/styles/left-sidebar.css
@@ -1,16 +1,7 @@
-.left-sidebar {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-
-  position: fixed;
+.left.sidebar {
   left: 0;
-  bottom: 0;
-  top: 75px;
+  justify-content: space-between;
   width: 100px;
-  background-color: white;
-  z-index: 50;
 }
 
 .sidebar-link {
@@ -19,6 +10,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 0 5px;
   cursor: pointer;
 }
 
