--- a/styles/right-sidebar.css
+++ b/styles/right-sidebar.css
@@ -1,15 +1,6 @@
-.right-sidebar {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  position: fixed;
-  right: 10px;
-  bottom: 0;
-  top: 75px;
+.right.sidebar {
+  right: 0;
   width: 300px;
-  background-color: white;
-  z-index: 50;
 }
 
 .ad-image {
